--- a/src/main/resources/layout/Editor.fxml
+++ b/src/main/resources/layout/Editor.fxml
@@ -32,27 +32,27 @@
                 <MenuItem mnemonicParsing="false" text="Exit" onAction="#closeFile"/>
             </Menu>
             <Menu mnemonicParsing="false" text="Edit">
-                <MenuItem mnemonicParsing="false" text="Undo">
+                <MenuItem mnemonicParsing="false" text="Undo" onAction="#undo">
                     <accelerator>
                         <KeyCodeCombination alt="UP" code="Z" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
                     </accelerator>
                 </MenuItem>
-                <MenuItem mnemonicParsing="false" text="Cut">
+                <MenuItem mnemonicParsing="false" text="Cut" onAction="#cut">
                     <accelerator>
                         <KeyCodeCombination alt="UP" code="X" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
                     </accelerator>
                 </MenuItem>
-                <MenuItem mnemonicParsing="false" text="Copy">
+                <MenuItem mnemonicParsing="false" text="Copy" onAction="#copy">
                     <accelerator>
                         <KeyCodeCombination alt="UP" code="C" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
                     </accelerator>
                 </MenuItem>
-                <MenuItem mnemonicParsing="false" text="Paste">
+                <MenuItem mnemonicParsing="false" text="Paste" onAction="#paste">
                     <accelerator>
                         <KeyCodeCombination alt="UP" code="V" control="DOWN" meta="UP" shift="UP" shortcut="UP"/>
                     </accelerator>
                 </MenuItem>
-                <MenuItem mnemonicParsing="false" text="Delete">
+                <MenuItem mnemonicParsing="false" text="Delete" onAction="#delete">
                     <accelerator>
                         <KeyCodeCombination alt="UP" code="DELETE" control="UP" meta="UP" shift="UP" shortcut="UP"/>
                     </accelerator>
